[workspace]
members = ["programs/pump"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0" }
solana-program = "=1.18.17"
pyth-solana-receiver-sdk = "=0.3.2"
spl-token-2022 = "3.0.5"
spl-token = "=4.0.0"
num_enum = "=0.7.2"
